# cmake-examples

gtest/: CMakeLists.txt  gtest.cmake  main.cpp
